# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = TMP-Package
version = 2023.2.0b1
description = API for starter
author = sheldon
author_email = fly50789@gmail.com
#license = MIT
#license_files = LICENSE.txt
long_description = TMP Package
# long_description_content_type = text/x-rst; charset=UTF-8
# url = https://github.com/pyscaffold/pyscaffold/
# Add here related links, for example:
#project_urls =
#    Documentation = https://pyscaffold.org/

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# https://pypi.org/classifiers/
classifiers =
    #Development Status :: 4 - Beta
    #Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = False
package_dir =
    =src
# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8
install_requires = file: requirements.txt

[options.package_data]



[options.data_files]
data = requirements.txt

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install my-zope-subpackage[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
tests =
    setuptools
    pytest
    pytest-cov
    pytest-pep8
    wheel

[options.entry_points]
console_scripts =
    tmp_project = tmp_project:main_cli
# For example:
# console_scripts =
#     fibonacci = zope.subpackage.skeleton:run
